enabled 24gig nodes and gclog file for droolsjbpm-integration